[gd_scene load_steps=2 format=3 uid="uid://dxg78h5n4qmv6"]

[ext_resource type="Script" path="res://scripts/ui/BeverageButton.gd" id="1_beverage_button"]

[node name="BeverageButton" type="Button"]
custom_minimum_size = Vector2(250, 90)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Beverage"
script = ExtResource("1_beverage_button")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0

[node name="BeverageIcon" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ðŸ¥¤"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BeverageInfo" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BeverageName" type="Label" parent="HBoxContainer/BeverageInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Beverage Name"
horizontal_alignment = 1

[node name="QuantityLabel" type="Label" parent="HBoxContainer/BeverageInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0 disponibles"
horizontal_alignment = 1

[node name="IngredientsLabel" type="Label" parent="HBoxContainer/BeverageInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Necesita ingredientes"
horizontal_alignment = 1
